[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.11.0"
rand = "0.8.5"
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
yew-bootstrap = "0.9"
stylist = { version = "0.13.0", features = ["yew"] }
